<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/sshd_setup">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_enabled"
            android:title="@string/enabled" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/pref_enabled"
            android:key="@string/pref_daemon"
            android:title="@string/run_on_startup" />

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:title="@string/public_key"
            android:key="@string/pref_key" />
    </PreferenceCategory>
</PreferenceScreen>